--- a/src/makefile
+++ b/src/makefile
@@ -2,8 +2,8 @@
 
 ALL: lib
 
-#CFLAGS = -g3 -Wall -Wextra -Wno-unused-parameter -Wconversion -Wno-sign-conversion
-#FFLAGS = -g3 -Wall -Wextra -fcheck=all
+#CFLAGS = -g3 -pedantic -Wall -Wextra -Wno-unused-parameter -Wconversion -Wno-sign-conversion -Wno-long-long
+#FFLAGS = -g3 -pedantic -Wall -Wextra -fcheck=all
 
 SOURCEH  = ../include/petiga.h petigapc.h petigagrid.h petigapart.h
 SOURCEC  = petiga.c petigareg.c petigaaxis.c petigarule.c petigabasis.c petigabound.c petigaelem.c petigapoint.c petigavec.c petigamat.c petigascl.c petigapcb.c petigapce.c petigaksp.c petigasnes.c petigats.c petigaio.c petigagrid.c petigapart.c
