Implement constant Neumann boundary conditions

--- a/demo/makefile
+++ b/demo/makefile
@@ -5,6 +5,7 @@ TARGETS = InputOutput \
 	  AdvectionDiffusion \
 	  Laplace \
 	  Poisson \
+	  Neumann \
 	  Bratu \
 	  PatternFormation \
 	  CahnHilliard2D \
@@ -58,6 +59,9 @@ Laplace: Laplace.o chkopts
 	${CLINKER} -o $@ $< ${PETIGA_LIB}
 	${RM} -f $<
 Poisson: Poisson.o chkopts
+	${CLINKER} -o $@ $< ${PETIGA_LIB}
+	${RM} -f $<
+Neumann: Neumann.o chkopts
 	${CLINKER} -o $@ $< ${PETIGA_LIB}
 	${RM} -f $<
 LoggChallenge: LoggChallenge.o chkopts
@@ -162,6 +166,17 @@ runex6c_4:
 	-@${MPIEXEC} -n 4 ./Bratu ${OPTS} -iga_dim 2 -steady false -ts_max_steps 2
 runex6d_1:
 	-@${MPIEXEC} -n 1 ./Bratu ${OPTS} -iga_dim 2 -steady -iga_collocation
+runex7a_1:
+	-@${MPIEXEC} -n 1 ./Neumann ${OPTS} -dim 1
+runex7a_4:
+	-@${MPIEXEC} -n 4 ./Neumann ${OPTS} -dim 1
+runex7b_1:
+	-@${MPIEXEC} -n 1 ./Neumann ${OPTS} -dim 2
+runex7b_4:
+	-@${MPIEXEC} -n 4 ./Neumann ${OPTS} -dim 2
+runex7c_4:
+	-@${MPIEXEC} -n 4 ./Neumann ${OPTS} -dim 3
+
 
 InputOutput := InputOutput.PETSc runex0a_1 runex0a_2 runex0a_3 runex0a_4 runex0a_8 runex0a.rm InputOutput.rm
 L2Proj1D := L2Proj1D.PETSc runex1a_1 runex1a_4 L2Proj1D.rm
@@ -169,6 +184,7 @@ L2Proj2D := L2Proj2D.PETSc runex1b_1 runex1b_4 L2Proj2D.rm
 Poisson1D := Poisson1D.PETSc runex2a_1 runex2a_4 Poisson1D.rm
 Poisson2D := Poisson2D.PETSc runex2b_1 runex2b_4 Poisson2D.rm
 Poisson3D := Poisson3D.PETSc runex2c_1 runex2c_4 Poisson3D.rm
+Neumann := Neumann.PETSc runex7a_1 runex7a_4 runex7b_1 runex7b_4 runex7c_4 Neumann.rm
 Bratu := Bratu.PETSc runex6a_1 runex6a_2 runex6b_1 runex6b_4 runex6c_1 runex6c_4 runex6d_1 Bratu.rm
 CahnHilliard2D := CahnHilliard2D.PETSc runex4_1 runex4_4 CahnHilliard2D.rm
 PatternFormation := PatternFormation.PETSc runex5a_1 runex5a_4 runex5b_1 runex5b_4 PatternFormation.rm
@@ -177,7 +193,7 @@ L2Proj       := $(L2Proj1D) $(L2Proj2D) $(L2Proj3D)
 Poisson      := $(Poisson1D) $(Poisson2D) $(Poisson3D)
 CahnHilliard := $(CahnHilliard2D) $(CahnHilliard3D)
 
-TESTEXAMPLES_C := $(InputOutput) $(L2Proj) $(Poisson) $(Bratu) $(CahnHilliard) $(PatternFormation)
+TESTEXAMPLES_C := $(InputOutput) $(L2Proj) $(Poisson) $(Neumann) $(Bratu) $(CahnHilliard) $(PatternFormation)
 TESTEXAMPLES_F :=
 TESTEXAMPLES_FORTRAN:=$(TESTEXAMPLES_F)
 testexamples:
