Fortran: fix all real initializations

--- a/src/makefile
+++ b/src/makefile
@@ -10,8 +10,9 @@ ALL: lib
 
 #FFLAGS_STD_F03 = -std=f2003
 #FFLAGS_STD_F08 = -std=f2008
+#FFLAGS_STD_F08 = -std=f2008ts
 #FFLAGS_STD = ${FFLAGS_STD_F03}
-#FFLAGS = ${FFLAGS_STD} -pedantic -Wall -Wextra -fcheck=all
+#FFLAGS = ${FFLAGS_STD} -pedantic -Wall -Wextra -Wimplicit-interface -g3 -fcheck=all -fbacktrace
 
 SOURCEH  = ../include/petiga.h petigabl.h petigagrid.h petigapart.h
 SOURCEC  = petiga.c petigareg.c petigaaxis.c petigarule.c petigabasis.c petigabound.c petigaelem.c petigapoint.c petigavec.c petigamat.c petigascl.c petigapcb.c petigapce.c petigapc.c petigaksp.c petigasnes.c petigats.c petigats2.c petigaio.c petigagrid.c petigapart.c snesfdcolor.c tsalpha2.c
